--- a/InventarioTiendaUdem/web/index.xhtml
+++ b/InventarioTiendaUdem/web/index.xhtml
@@ -4,9 +4,19 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
         Hello from Facelets
+        <br />
+        <h:link outcome="/insumos/List" value="Show All Insumos Items"/>
+        <br />
+        <h:link outcome="/producto/List" value="Show All Producto Items"/>
+        <br />
+        <h:link outcome="/usuarios/List" value="Show All Usuarios Items"/>
     </h:body>
+
+
+
 </html>
 
